--- a/02-react-query-issues/src/assets/styles.css
+++ b/02-react-query-issues/src/assets/styles.css
@@ -35,3 +35,13 @@ h3 {
     background-color: rgba(255, 255, 255, 0.1);
     transition: all .5s;
 }
+
+.loader{
+    animation: spin-animate 1.5s infinite linear;
+    display:block;
+}
+
+@keyframes spin-animate {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
