--- a/02-react-query-issues/src/assets/styles/styles.css
+++ b/02-react-query-issues/src/assets/styles/styles.css
@@ -28,12 +28,13 @@ h3 {
 
 .label-picker {
     cursor: pointer;
-    transition: all .5s;
+    transition: all .2s;
 }
 
 .label-picker:hover {
-    background-color: rgba(255, 255, 255, 0.1);
-    transition: all .5s;
+    background-color: rgba(255, 0, 0, 0.2
+    );
+    transition: all .2s;
 }
 
 .loader{
@@ -44,4 +45,7 @@ h3 {
 @keyframes spin-animate {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
+}
+.label-active {
+    background-color: rgba(255, 255, 255, 0.5);
 }
